Hero image full width of page, required a kill of overflow globally. Add Alt Text to all images. Fix headshot middle-ground sizing. Logo and NavBar resizing to mirror each other and kill vertical padding. Scrollbar Styling, both vertical and horizontal. 2 hours 15 mins

--- a/main.css
+++ b/main.css
@@ -4,34 +4,68 @@ Primary Blue --> rgb(12, 59, 93), #0c3b5d;
 Primary Green --> rgb(25, 178, 80), #19b250;
 Secondary Blue --> rgb(0, 160, 223), #00a0df;
 Tertiary Blue --> rgb(33, 94, 172), #215eac;
-linear-gradient(135deg,rgba(6,147,227,1) 0%,rgb(155,81,224) 100%)
-linear-gradient(135deg,rgb(2,3,129) 0%,rgb(40,116,252) 100%)
-linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 100%) 
+linear-gradient(135deg,rgba() 0%,rgb() 100%)
+linear-gradient(135deg,rgb() 0%,rgb() 100%)
+linear-gradient(135deg,rgb() 0%,rgb() 50%,rgb() 100%) 
 */
+
+#wrapper  {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 .hidden {
     display: none;
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+	width: 12px;
+    height: 10px;
+    scrollbar-width: 10px;
+    scrollbar-color: rgb(0, 160, 223), rgb(12, 59, 93);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: rgb(12, 59, 93); 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgb(25, 178, 80); 
+	border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: rgb(25, 178, 80);
+}
+
 /* NAVBAR */
 #navMain {
-    background-color: rgb(240, 248, 255, 0.65);
+    background-color: rgb(0, 160, 223);
     backdrop-filter: blur(8px) contrast(100%);
     -webkit-backdrop-filter: blur(8px) contrast(100%);
+    height: 100px;
+}
+
+#navContainer {
+    height: 100px;
 }
 
 #titleLogo {
-    max-height: 90px;
-    border-radius: 5px;
+    max-height: 98px;
+    /* width: 70%; */
+    border-radius: 7px;
 }
 
 .navbar-brand {
     display: inline-block;
 }
-
-/* .links {
-    
-} */
 
 .visibleLinks {
     margin: auto 10px;
@@ -55,7 +89,7 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
     text-align: center;
     margin-top: -2px;
     padding: 2px 10px;
-    background-color: rgb(25, 178, 80, 0.95);
+    background-color: rgb(12, 59, 93);
 }
 
 .dropdownList {
@@ -85,6 +119,7 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
 }
 
 @media screen and (max-width: 991.8px) {
+
     #dropdownCtrl, #dropdownMenu {
         display: none;
     }
@@ -112,7 +147,7 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
     }
 
     #hamButton {
-        border: 3px solid rgb(12, 59, 93, 0.85);
+        border: 3px solid rgb(25, 178, 80, 0.85);
     }
 
     #hamButton:focus {
@@ -122,7 +157,7 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
 
     #spanIcon {
         background-image: url(
-        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(12, 59, 93)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(25, 178, 80)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
     }
 
     #hamburgerList {
@@ -133,34 +168,51 @@ linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 10
     }
 
     #navMain {
-        background-color: rgb(240, 248, 255, 0.05);
+        /* height: 110px; */
+        /* border: 1px solid white; */
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+    }
+
+    #navContainer {
+        /* height: 110px; */
+        /* border: 1px solid white; */
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+        align-items: center;
     }
 
     #dropdownMenu {
         background-color: rgb(12, 59, 93);
     }
+
+    #titleLogo {
+        margin-top: -5px !important;
+    }
 }
 
 /* GLOBAL CSS */
 body {
-    padding-top: 116px;
+    padding-top: 100px;
 }
 
 .topRow {
-    /* border: 1px solid red; */
+    /* border: 1px solid red;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .topDiv {
-    width: 97vw;
-    height: 70vh;
+    /* width: 97vw; */
+    height: 80vh;
     position: relative;
-    background-size: 100vw 70vh;
+    /* background-size: 100vw 80vh; */
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    border-radius: 5px;
+    /* display: flex;
+    justify-content: center; */
+    /* border-radius: 5px; */
 }
 
 .heroDiv {
@@ -169,8 +221,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 160, 223, 0.58);
-    border-radius: 5px;
+    background-color: rgb(33, 94, 172, 0.8);
+    /* display: flex;
+    justify-content: center; */
+    /* border-radius: 5px; */
 }
 
 .heroTextRow {
@@ -327,7 +381,7 @@ h3 {
 }
 
 #headshot {
-    width: 45%;
+    width: 55%;
 }
 
 #welcomeMsgDiv {
@@ -339,6 +393,7 @@ h3 {
     justify-content: center;
     align-items: center;
     padding: 3% 3%;
+    color: white;
 }
     
 #welcomeMsgDiv:after {
@@ -359,14 +414,11 @@ h3 {
 #welcomeMsg {
     font-size: calc(12px + 1.6vw);
     font-family: "Averia Libre", cursive;
-    color: white;
-    /* margin-top: 4%;  */
 }
 
 #welcomeMsg2 {
     font-size: calc(10px + 1.1vw);
     font-family: "Poppins", sans-serif;
-    color: white;
 }
 
 
@@ -410,6 +462,16 @@ h3 {
         margin-left: -30px;
         margin-top: -30px;
 
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1031px) {
+    #headshotDiv {
+        justify-content: left;
+    }
+
+    #headshot {
+        width: 75%;
     }
 }
 
@@ -963,7 +1025,7 @@ h3 {
 
 } */
 
-#footRow {
+#footRow2 {
     padding: 15px 0 5px 0;
     display: flex;
     justify-content: center;
